[FIX]: overflow, event bubbling/propagation and position bugs

--- a/next-step-frontend/src/styles.css
+++ b/next-step-frontend/src/styles.css
@@ -53,7 +53,7 @@ p {
 #app {
     width: 100%;
     position: relative;
-    min-height: 100%;
+    min-height: 100dvh;
     height: 100%;
     max-width: 1350px;
     margin: auto;
@@ -61,7 +61,7 @@ p {
     flex-direction: column;
     align-items: center;
     overflow-x: clip;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
 }
 
 * {
@@ -70,12 +70,14 @@ p {
 
 
 html, body {
-    width: 100vw;
-    height: 100dvh;
+    width: 100%;
     margin: 0;
     padding: 0;
     display: block;
     background-color: var(--lite);
+}
+
+body {
     overflow-y: auto;
 }
 
@@ -83,4 +85,8 @@ html, body {
     font-family: "Familjen Grotesk", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+::-webkit-scrollbar {
+    width: 0;
 }
